# consensus-engine

./: .gitignore  LICENSE  README.md  dir.sh  project-structure.txt  pyproject.toml  pytest.ini  query.txt
.github/workflows/: released.yaml  test-on-pr.yaml
docs/: LEARNINGS.md  README.md  configuration.md  consensus.md  consensus_metrics.md  database.md  engine.md  interfaces.md  models.md  protocols.md  response_processing.md  testing.md
outputs/: weather.py
src/consensus_engine/: __init__.py  cli.py  engine.py  init.py  web.py
src/consensus_engine/config/: round_config.py  settings.py
src/consensus_engine/database/: __init__.py  models.py
src/consensus_engine/deliberation/: consensus.py  round_manager.py  validators.py
src/consensus_engine/models/: anthropic.py  base.py  gemini.py  loader.py  openai.py
src/consensus_engine/protocols/: __init__.py  protocols.py
src/consensus_engine/utils/: __init__.py  formatting.py  response_parser.py
tests/: README.md  __init__.py  conftest.py  test_engine.py  test_integration.py  test_interfaces.py  test_models.py
tests/cleanup/: mock_clients.py.bak  mock_responses.py.bak
tests/fixtures/: conftest.py
tests/integration/: __init__.py  test_engine.py
tests/mocks/: __init__.py  clients.py  database.py  db.py  responses.py
tests/unit/: __init__.py  test_cli.py  test_engine.py  test_interfaces.py  test_models.py  test_web.py
unit/: test_interfaces.py
